--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div id="header">
         <a href="#inicio">Home</a>
         <a href="#sobremim">Sobre Mim</a>
-        <a href="">Habilidades</a>
-        <a href="">Projetos</a>
+        <a href="#habilidades">Habilidades</a>
+        <a href="#projetos">Projetos</a>
         <a href="">Entre em contato</a>
         </div>
     </header>
@@ -24,7 +24,7 @@
                         <h1>Luisa Vera</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna.</p>
                         <button>
-                            <a href="">Conheça meus projetos</a>
+                            <a href="#projetos">Conheça meus projetos</a>
                         </button>
                     </div>
            </div>
@@ -34,8 +34,9 @@
             <div id="informacoesmim">
                 <div id="textosobremim">
                     <h2>Sobre mim</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna. Praesent ante nibh, feugiat sit amet commodo ac, venenatis at elit. Vivamus nec est dapibus, aliquet libero in, laoreet dui. In hac habitasse platea dictumst. Donec placerat magna id mauris placerat, sed egestas turpis pretium. Praesent ornare augue ut bibendum lobortis. Nunc et feugiat massa, sit amet mollis enim. Nulla cursus ultrices consectetur. In tempor massa vel augue faucibus, eget semper mi sodales. Maecenas sodales sodales ullamcorper. Vestibulum dictum, dui a convallis vestibulum, orci dolor bibendum sapien, nec interdum diam enim quis libero. Fusce vestibulum tempor arcu quis commodo. Integer nec ligula non odio ultrices accumsan. Ut eu faucibus arcu, id facilisis turpis.
-                    </p>   
+                    <p>Sou a Luisa Vera, uma desenvolvedora de 16 anos apaixonada por dar vida a designs criativos. Atualmente, no Ensino Médio Técnico em Informática, eu mergulho no universo do front-end, construindo projetos que unem estética e funcionalidade. Fico feliz em compartilhar meu trabalho com você.
+                    </p>
+                    <hr>   
                 </div>
                 <div id="fotomim">
                     <img id="img2" src="assets/img/eu ne.png" alt="">
@@ -47,19 +48,48 @@
             <div id="habilidadesmim">
                 <h2>Habilidades</h2>
                 <div id="habilidadesicon">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img id="htmlicon" src="assets/img/html.png" alt="">
+                    <img src="assets/img/css.png" alt="">
+                    <img src="assets/img/js.png" alt="">
                 </div>
 
             </div>
         </section>
         <section id="projetos">
-
+            <div id="projetosmim">
+                <h2>bla</h2>
+                <div id="cardprojeto">
+                    <h3>Revista Aura</h3>
+                    <img src="" alt="" id="projeto">
+                    <p>descrição projeto</p>
+                    <button>
+                        <a href="https://luisav10.github.io/Revista-Aura/">visite</a>
+                    </button>
+                </div>
+                <div id="cardprojeto">
+                    <h3>Nome projeto</h3>
+                    <img src="" alt="" id="projeto">
+                    <p>descrição projeto</p>
+                </div>
+                <div id="cardprojeto">
+                    <h3>Nome projeto</h3>
+                    <img src="" alt="" id="projeto">
+                    <p>descrição projeto</p>
+                </div>
+            </div>
+            
         </section>
     </main>
     <footer>
-
+        <p>Todos os direitos reservados para mim!</p>
+        <div id="botoesfooter">
+            <a href="https://github.com/luisav10">
+                <img src="assets/img/github.png" alt="">
+            </a>
+            <a href="">
+                <img src="assets/img/linkedin.png" alt="">
+            </a>
+        </div>
     </footer> 
 </body>
 </html>
