--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section id="inicio">
             <div id="iniciotexto">
-                <img id="img1" src="assets/img/eu ne.png" alt="eu">
+                <img id="img1" src="assets/img/euu.png" alt="eu">
                     <div id="informacoesinicio">
                         <h1>Luisa Vera</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna.</p>
@@ -59,8 +59,8 @@
             <div id="projetosmim">
                 <h2>bla</h2>
                 <div id="cardprojeto">
+                    <img src="assets/img/revistaaura.jpeg" alt="" id="projeto">
                     <h3>Revista Aura</h3>
-                    <img src="" alt="" id="projeto">
                     <p>descrição projeto</p>
                     <button>
                         <a href="https://luisav10.github.io/Revista-Aura/">visite</a>
