--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <button>
                             <a href="#projetos">Conheça meus projetos</a>
                         </button>
+                        
                     </div>
            </div>
         </section>
@@ -37,6 +38,14 @@
                     <p>Sou a Luisa Vera, uma desenvolvedora de 16 anos apaixonada por dar vida a designs criativos. Atualmente, no Ensino Médio Técnico em Informática, eu mergulho no universo do front-end, construindo projetos que unem estética e funcionalidade. Fico feliz em compartilhar meu trabalho com você.
                     </p>
                     <hr>   
+                <div id="botoesinfo">
+                    <a href="https://github.com/luisav10">
+                        <img src="assets/img/github.png" alt="">
+                    </a>
+                    <a href="luisav10.github.io">
+                        <img src="assets/img/linkedin.png" alt="">
+                    </a>
+                </div>
                 </div>
                 <div id="fotomim">
                     <img id="img2" src="assets/img/eu ne.png" alt="">
@@ -57,31 +66,37 @@
         </section>
         <section id="projetos">
             <div id="projetosmim">
-                <h2>bla</h2>
+                <h2>Projetos</h2>
                 <div id="cardprojeto">
                     <img src="assets/img/revistaaura.jpeg" alt="" id="projeto">
                     <h3>Revista Aura</h3>
-                    <p>descrição projeto</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna.</p>
                     <button>
                         <a href="https://luisav10.github.io/Revista-Aura/">visite</a>
                     </button>
                 </div>
                 <div id="cardprojeto">
-                    <h3>Nome projeto</h3>
+                    <h3>Pokémon Store</h3>
                     <img src="" alt="" id="projeto">
-                    <p>descrição projeto</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna.</p>
+                    <button>
+                        <a href="https://luisav10.github.io/Pokemon/">visite</a>
+                    </button>
                 </div>
                 <div id="cardprojeto">
-                    <h3>Nome projeto</h3>
+                    <h3>Fast Food</h3>
                     <img src="" alt="" id="projeto">
-                    <p>descrição projeto</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Morbi facilisis leo vitae orci efficitur congue. Suspendisse ut pharetra dolor, eu venenatis urna.</p>
+                    <button>
+                        <a href="https://luisav10.github.io/Subway/">visite</a>
+                    </button>
                 </div>
             </div>
             
         </section>
     </main>
     <footer>
-        <p>Todos os direitos reservados para mim!</p>
+        <p>© Feito por luisav10</p>
         <div id="botoesfooter">
             <a href="https://github.com/luisav10">
                 <img src="assets/img/github.png" alt="">
